--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
     <link rel="stylesheet" href="style.css">
     <script src="pieces.js"></script>
     <script src="app.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="./chess-solid.svg" alt="" width="30" height="24">
+            Chess Game
+          </a>
+        </div>
+    </nav>
+
     <div id="gameboard"></div>
-    <p>It is <span id="player"></span>'s go.</p>
-    <p id="info-display"></p>
+    <div class="alert alert-secondary" role="alert">
+        <p>It is <span id="player"></span>'s go.</p>
+        <p id="info-display"></p>
+    </div>
+    <div class="alert alert-danger" role="alert">
+        <p id="info-move"></p>
+    </div>
+    <div class="conteudo"></div>
+
+    <footer class="footer">
+        <div class="container">
+          <p>Develop By Vitória Germann - 2023 | IFRS POA<p>
+        </div>
+    </footer>
+    
 </body>
 </html>
