--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <footer class="footer">
         <div class="container">
-          <p>Develop By Vitória Germann - 2023 | IFRS POA<p>
+          <p>Developed By Vitória Germann - 2023 | IFRS POA<p>
         </div>
     </footer>
     
