--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </div>
       </div>
 
-      <div class="rectangle"></div>
+      <div class="rectangle">
+        <br><h5>Moved Pieces</h5><hr>
+      </div>
     </div>
 
     <footer class="footer">
