adicionando contagem de peças capturadas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 
     <div class="group">
 
+      <div class="captured-pieces">
+        <br><h5>Captured-pieces</h5><hr>
+        <div id="white-captured">Captured by White: 0</div>
+        <div id="black-captured">Captured by Black: 0</div>
+      </div>
+
       <div>
         <div id="gameboard"></div>
 
