ajustando visual da captura das peças

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="group">
 
       <div class="captured-pieces">
-        <br><h5>Captured-pieces</h5><hr>
+        <br><h5>Captured Pieces</h5><hr>
         <div id="white-captured">Captured by White: 0</div>
         <div id="black-captured">Captured by Black: 0</div>
       </div>
