tentativa de xeque

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <div class="alert alert-success" role="alert">
             <p id="info-win"></p>
           </div>
+          <div class="alert alert-warning" role="alert">
+            <p id="info-xeque"></p>
+          </div>
         </div>
       </div>
 
